// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[reducer/notifications] 1`] = `
Object {
  "2H200pPtv": undefined,
  "testID": "test",
}
`;

exports[`[reducer/notifications] 2`] = `
Object {
  "2H200pPtv": undefined,
}
`;
